--- a/about.html
+++ b/about.html
@@ -42,10 +42,15 @@
   </div>
 </main>
 
-<footer class="text-center py-4" style="background:#002147;color:#fff;">
-  <div class="container">
-    <p class="mb-1">TRFSK Omkar Services Pvt Ltd | All activities conducted in compliance with MOA &amp; Companies Act, 2013</p>
-    <small>&copy; 2025 Omkar Enterprises</small>
+<<footer class="text-center">
+  <p>TRFSK Omkar Services Pvt Ltd | All activities conducted in compliance with MOA & Companies Act, 2013</p>
+  <p>&copy; 2025 Omkar Enterprises</p>
+  <div>
+    <a href="https://instagram.com/yourprofile" target="_blank">Instagram</a> |
+    <a href="https://facebook.com/yourprofile" target="_blank">Facebook</a> |
+    <a href="https://linkedin.com/company/yourprofile" target="_blank">LinkedIn</a> |
+    <a href="https://twitter.com/yourprofile" target="_blank">Twitter</a> |
+    <a href="https://youtube.com/yourchannel" target="_blank">YouTube</a>
   </div>
 </footer>
 
