--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-grey">
+  <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom shadow-sm">
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <img src="images/logo.png" alt="Logo" width="40" class="me-2"> Omkar Enterprises
