--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#212529;">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background:linear-gradient(90deg,#001f3f,#003366);">
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <img src="images/logo.png" alt="Logo" width="40" class="me-2"> Omkar Enterprises
