--- a/investors.html
+++ b/investors.html
@@ -37,11 +37,11 @@
 </nav>
   <!-- Hero -->
   <section class="hero text-center">
-    <div class="container">
-      <h1>Investor Relations</h1>
-      <p>Committed to transparency, trust, and MOA-compliant performance reporting.</p>
-    </div>
-  </section>
+    <div class="text-center mt-4">
+  <a href="contact.html" class="btn btn-primary px-4 me-2">Contact Us</a>
+  <a href="investor-relations.html" class="btn btn-outline-secondary px-4">Investor Relations</a>
+</div>
+
 
   <!-- Aggregate Performance Chart -->
   <section class="container my-5">
