--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
 </head>
 <body>
   <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color:#7198f5;">
+<nav class="navbar navbar-expand-lg" style="background-color:#7198f5;">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="index.html">
       <img src="images/logo.png" alt="Omkar Enterprises" height="40" class="me-2">
-      <span style="font-weight:600; color:#002147; font-size:1.2rem;">Omkar Enterprises</span>
+      <span style="font-weight:600; color:#fff; font-size:1.2rem;">Omkar Enterprises</span>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="compliance.html">Compliance</a></li>
-        <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="services.html">Services</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="compliance.html">Compliance</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="blog.html">Blog</a></li>
         <!-- Highlight Contact Us -->
         <li class="nav-item">
-          <a class="btn btn-dark text-white ms-2 px-3" href="contact.html">Contact Us</a>
+          <a class="btn btn-light ms-2 px-3" href="contact.html">Contact Us</a>
         </li>
       </ul>
     </div>
