--- a/index.html
+++ b/index.html
@@ -10,32 +10,33 @@
 </head>
 <body>
   <!-- Navbar -->
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg custom-navbar">
+<!-- NAV - paste into top of each page (replace old nav) -->
+<nav class="navbar navbar-expand-lg navbar-dark brand-navbar">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="index.html">
-      <img src="images/logo.png" alt="Omkar Enterprises" height="40" class="me-2">
-      <span>Omkar Enterprises</span>
+      <img src="images/logo.png" alt="Omkar Enterprises" class="brand-logo me-2">
+      <span class="brand-name">Omkar Enterprises</span>
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
+      <ul class="navbar-nav ms-auto align-items-lg-center">
         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
         <li class="nav-item"><a class="nav-link" href="compliance.html">Compliance</a></li>
         <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-        <!-- Highlight Contact Us -->
-        <li class="nav-item">
-          <a class="btn btn-light ms-2 px-3" href="contact.html">Contact Us</a>
+        <li class="nav-item ms-lg-3">
+          <a class="btn btn-outline-light btn-cta" href="contact.html">Contact Us</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
-
 
   <!-- Hero -->
   <section class="hero text-center">
