--- a/about.html
+++ b/about.html
@@ -42,16 +42,16 @@
 
   <!-- Company Story -->
   <section class="container my-5">
-    <div class="row align-items-center">
-      <div class="col-md-6">
-        <img src="images/about.jpg" class="img-fluid rounded" alt="About Omkar Enterprises">
-      </div>
-      <div class="col-md-6">
-        <h2>Who We Are</h2>
-        <p>Omkar Enterprises was founded with the vision to provide sustainable financial growth opportunities while adhering strictly to compliance and MOA-approved objectives.</p>
-        <p>We focus on building long-term investor trust through disciplined strategies, transparency in operations, and timely delivery of commitments.</p>
-      </div>
-    </div>
+   <div class="row align-items-center">
+  <div class="col-md-4">
+    <img src="images/team.jpg" alt="About Omkar Enterprises" class="img-fluid rounded shadow">
+  </div>
+  <div class="col-md-8">
+    <h2>Who We Are</h2>
+    <p>Omkar Enterprises was founded with the vision to provide sustainable financial growth opportunities while adhering strictly to compliance and MOA-approved objectives.</p>
+    <p>We focus on building long-term investor trust through disciplined strategies, transparency in operations, and timely delivery of commitments.</p>
+  </div>
+</div>
   </section>
 
   <!-- Mission, Vision, Values -->
