--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,7 @@
         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="investors.html">Investors Relations</a></li>
         <li class="nav-item"><a class="nav-link" href="compliance.html">Compliance</a></li>
         <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
         <li class="nav-item ms-lg-3">
