--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
       
       <!-- Left Side: Image -->
       <div class="col-md-5 text-center mb-4 mb-md-0">
-        <img src="images/team.jpg" 
+        <img src="images/team.png" 
              alt="About Omkar Enterprises" 
              class="img-fluid rounded shadow-lg" 
              style="max-width: 350px; border-radius: 15px;">
